force-app/main/default/objects/User/fields/Branch1__c.field-meta.xml
<CustomField>
    <fullName>Branch1__c</fullName>
    <label>Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Branch</valueSetName>
    </valueSet>
</CustomField>