force-app/main/default/objects/User/fields/CommissionRate__c.field-meta.xml
<CustomField>
    <fullName>CommissionRate__c</fullName>
    <label>Commission Rate</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>