force-app/main/default/objects/User/fields/ManagerReportTo__c.field-meta.xml
<CustomField>
    <fullName>ManagerReportTo__c</fullName>
    <label>Manager/Report To</label>
    <length>255</length>
    <type>Text</type>
</CustomField>