force-app/main/default/objects/User/fields/New_Salesman__c.field-meta.xml
<CustomField>
    <fullName>New_Salesman__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Salesman?</label>
    <type>Checkbox</type>
</CustomField>