force-app/main/default/objects/User/listViews/AllUsers.listView-meta.xml
<ListView>
    <fullName>AllUsers</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>CORE.USERS.DEPARTMENT</columns>
    <columns>Manager__c</columns>
    <columns>ManagerReportTo__c</columns>
    <columns>Branch1__c</columns>
    <columns>SalesTeam__c</columns>
    <columns>TIMEZONE</columns>
    <filterScope>Everything</filterScope>
    <label>All Users</label>
    <language>en_US</language>
</ListView>